# faster-utf8-validator-rs

./: Cargo.toml  LICENSE-UPSTREAM  README.md
benches/: criterion_bench.rs
data/: ascii_sample_ok.data  mostly_ascii_sample_ok.data  random_bytes.data  utf8_sample_ok.data
src/: avx2.rs  lib.rs  sse.rs
