[package]
name = "faster-utf8-validator"
version = "0.1.0"
authors = ["Heinz N. Gies <heinz@licenser.net>"]
edition = "2018"

[features]
default = ["cpb"]
cpb = []

[dev-dependencies]
proptest = "0.10"
criterion = "0.3"
mimalloc = "0.1"
core_affinity = "*"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "criterion_bench"
harness = false
